   - Add optional mode parameter to -q / --query for overriding QueryMode
     for summary output and for enabling control of summary output style
     regardless of the number of interfaces in the database
   - Add --startempty option to daemon for starting and keeping the daemon
     running even if no interfaces were discovered and the database is empty


2.11 / 19-Aug-2023

 - Fixed
   - Database queries worked only if SQLite double-quoted string (DQS)
     feature (https://www.sqlite.org/quirks.html#dblquote) was enabled
   - Disabling data resolutions in data retention configuration didn't result
     in possibly existing database entries getting removed from the database
   - Disabling data resolutions in data retention configuration didn't result
     in the data resolution getting disabled but instead storing data forever
   - "expr: syntax error" during configure in BSD (pull request by namtsui)
   - Image output summary would show only "no data available" text in case of
     zero total traffic even when the historical data of no traffic could have
     been shown instead
   - Image output "-o -" content could get corrupted due to info, warning and
     error messages also using stdout, configuration file warnings being the
     most likely source, now uses stderr in image output
   - Configuration validation was too heavily limiting and enforcing image
     output 5 minute graph related configuration options for combinations that
     would have resulted in usable images
 - New
   - Database cleanup has been changed to interpret data retention
     configuration as number of entries to be kept instead of calendar time,
     this restores the behaviour to similar as it was up to version 1.18, the
     difference is visible only on systems that aren't powered all the time
   - Database is vacuumed during daemon startup and reload, behaviour is
     configurable using VacuumOnStartup and VacuumOnHUPSignal configuration
     options